--- a/Views/Itens/Create.cshtml
+++ b/Views/Itens/Create.cshtml
@@ -28,6 +28,14 @@
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProdutoId" class="control-label"></label>
+                <select asp-for="ProdutoId" class ="form-control" asp-items="ViewBag.ProdutoId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="NotaDeVendaId" class="control-label"></label>
+                <select asp-for="NotaDeVendaId" class ="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
