--- a/Views/Itens/Edit.cshtml
+++ b/Views/Itens/Edit.cshtml
@@ -29,6 +29,16 @@
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProdutoId" class="control-label"></label>
+                <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                <span asp-validation-for="ProdutoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NotaDeVendaId" class="control-label"></label>
+                <select asp-for="NotaDeVendaId" class="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
+                <span asp-validation-for="NotaDeVendaId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
