--- a/Views/Itens/Index.cshtml
+++ b/Views/Itens/Index.cshtml
@@ -21,6 +21,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Quantidade)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Produto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NotaDeVenda)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -35,6 +41,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantidade)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Produto.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NotaDeVenda.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
