--- a/Views/NotasDeVenda/Create.cshtml
+++ b/Views/NotasDeVenda/Create.cshtml
@@ -23,6 +23,22 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="ClienteId" class="control-label"></label>
+                <select asp-for="ClienteId" class ="form-control" asp-items="ViewBag.ClienteId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="VendedorId" class="control-label"></label>
+                <select asp-for="VendedorId" class ="form-control" asp-items="ViewBag.VendedorId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="TransportadoraId" class="control-label"></label>
+                <select asp-for="TransportadoraId" class ="form-control" asp-items="ViewBag.TransportadoraId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="TipoDePagamentoId" class="control-label"></label>
+                <select asp-for="TipoDePagamentoId" class ="form-control" asp-items="ViewBag.TipoDePagamentoId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
