--- a/Views/NotasDeVenda/Edit.cshtml
+++ b/Views/NotasDeVenda/Edit.cshtml
@@ -24,6 +24,26 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="ClienteId" class="control-label"></label>
+                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                <span asp-validation-for="ClienteId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="VendedorId" class="control-label"></label>
+                <select asp-for="VendedorId" class="form-control" asp-items="ViewBag.VendedorId"></select>
+                <span asp-validation-for="VendedorId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TransportadoraId" class="control-label"></label>
+                <select asp-for="TransportadoraId" class="form-control" asp-items="ViewBag.TransportadoraId"></select>
+                <span asp-validation-for="TransportadoraId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TipoDePagamentoId" class="control-label"></label>
+                <select asp-for="TipoDePagamentoId" class="form-control" asp-items="ViewBag.TipoDePagamentoId"></select>
+                <span asp-validation-for="TipoDePagamentoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
