--- a/Views/NotasDeVenda/Index.cshtml
+++ b/Views/NotasDeVenda/Index.cshtml
@@ -18,6 +18,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.Tipo)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cliente)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Vendedor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Transportadora)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TipoDePagamento)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +41,18 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tipo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cliente.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Vendedor.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Transportadora.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TipoDePagamento.Discriminator)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
