--- a/Views/PagamentoComCheque/Index.cshtml
+++ b/Views/PagamentoComCheque/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.InformacoesAdicionais)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Discriminator)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.InformacoesAdicionais)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Discriminator)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
