--- a/Views/Produtos/Index.cshtml
+++ b/Views/Produtos/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Preco)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Marca)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Preco)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Marca.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
